--- a/solano.yml
+++ b/solano.yml
@@ -19,7 +19,6 @@ profiles:
       MY_PROFILE: "first"
     :tests:
     - type: nosetests
-      name: my_my_number_test_my
       mode: basic
       output: exit-status
       files:
@@ -36,7 +35,7 @@ profiles:
       mode: basic
       output: exit-status
       files:
-        - "test/some_test.py"
+        - "test/myunit_app_test2.py"
 
   third:
     environment:
